# llvm-mos-sdk-7800

./: .gitignore  CMakePresets.json  README.md  astrowing.map  wait_vblank.s
examples/: CMakeLists.txt
examples/atari7800/: CMakeLists.txt  asset-bridge-demo.c  displaylist-demo.c  palette-demo.c
examples/atari7800/assets/: astrowing_fighter_160a.h  astrowing_unified_font_160a.h  fighter.sprite.h
examples/atari7800/astrowing/: assets_blocks.c  astrowing.c  convert_all_to_c.py  music_data.S
examples/atari7800/astrowing/assets/: arrows.h  asteroid_m.h  asteroid_s.h  blue_fighter.h  boss.h  bullet.h  energy.h  explosion.h  fighter.h  heart.h  lives_icon.h  spaceship.h  sprite_spaceship1.h  sprite_spaceship10.h  sprite_spaceship11.h  sprite_spaceship12.h  sprite_spaceship13.h  sprite_spaceship14.h  sprite_spaceship15.h  sprite_spaceship16.h  sprite_spaceship2.h  sprite_spaceship3.h  sprite_spaceship4.h  sprite_spaceship5.h  sprite_spaceship6.h  sprite_spaceship7.h  sprite_spaceship8.h  sprite_spaceship9.h  title_screen.h  title_screen_conv.h  unified_font.h
mos-platform/: CMakeLists.txt
mos-platform/atari7800/: CMakeLists.txt  atari7800.c  atari7800.h  clang.cfg  getchar.c  link.ld  putchar.c  reset.S
test/: CMakeLists.txt
test/atari7800/: CMakeLists.txt  check-a78-header.cmake  smoke.c
utils/: generate_strided_assets.py  import_binary_as_c_header.sh  pack_sprites_to_strided.py  png_indexed_tileset_to_160a_font_header.py  png_indexed_to_160a_header.py
